variables en el front

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+
+    <section class="daysWeatherInfo">
+        
+    </section>
     
-    <script src="./scripts/scripts.js"></script>
+    <script type="module" src="./scripts/scripts.js"></script>
 </body>
 </html>
