Estructura cambiada, pero no es capaz de acceder a la url cuando hago click

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <form action="/form" id="cityForm" method="get">
+        <form action="/weather" id="cityForm" method="get">
             <input type="text" name="cityInput" class="cityInput" placeholder="Escribe una ciudad...">
             <button type="submit" class="cityButton">Buscar</button>
         </form>
