--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,17 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/root.css">
+    <link rel="stylesheet" href="./style/style.css">
+
     <script type="module" src="./scripts/scripts.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav class="nav">
+            <img class="logo" src="./assets/images/logo.png" alt="logo" width="200px">
+            <form action="/weather" id="cityForm" method="get">
+                <input type="text" name="cityInput" class="cityInput" placeholder="Escribe una ciudad...">
+                <button type="submit" class="cityButton"><i class="bi bi-search"></i></button>
+                <!-- Tengo que quitarle el borde cuando hago click para escribir -->
+            </form>          
+        </nav>
+    </header>
     <main>
-        <form action="/weather" id="cityForm" method="get">
-            <input type="text" name="cityInput" class="cityInput" placeholder="Escribe una ciudad...">
-            <button type="submit" class="cityButton">Buscar</button>
-        </form>
         <div class="daysWeatherInfo">
         </div>
-        
     </main>
+    <footer class="footer">
+        <h3 class="footer-tittle">Contacto</h3>
+        <ul class="footer-links">
+            <li class="footer-links-linkedin"><a href="https://www.linkedin.com/in/david-rodríguez-pérez-softdev" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+            <li class="footer-links-GitHub"><a href="https://github.com/davidrguez98" target="_blank"><i class="bi bi-github"></i></a></li>
+            <li class="footer-links-email">ropeda98@gmail.com</li>
+        </ul>
+        <h4 class="footer-desgined">Designed by David Rodríguez</h4>
+    </footer>
 </body>
 </html>
