Lógica funciona. Falta terminar diseño y ordenar metodos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav class="nav">
-            <img class="logo" src="./assets/images/logo.png" alt="logo" width="200px">
+            <img class="logo" src="./assets/images/logo.png" alt="logo">
             <form action="/weather" id="cityForm" method="get">
                 <input type="text" name="cityInput" class="cityInput" placeholder="Escribe una ciudad...">
                 <button type="submit" class="cityButton"><i class="bi bi-search"></i></button>
