funcionamiento y diseño listo a falta de reestructuracion y diseño de tabla

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,16 +23,16 @@
             <form action="/weather" id="cityForm" method="get">
                 <input type="text" name="cityInput" class="cityInput" placeholder="Escribe una ciudad...">
                 <button type="submit" class="cityButton"><i class="bi bi-search"></i></button>
-                <!-- Tengo que quitarle el borde cuando hago click para escribir -->
             </form>          
         </nav>
     </header>
     <main>
         <div class="daysWeatherInfo">
+            
         </div>
     </main>
     <footer class="footer">
-        <h3 class="footer-tittle">Contacto</h3>
+        <h3 class="footer-tittle">Contact</h3>
         <ul class="footer-links">
             <li class="footer-links-linkedin"><a href="https://www.linkedin.com/in/david-rodríguez-pérez-softdev" target="_blank"><i class="bi bi-linkedin"></i></a></li>
             <li class="footer-links-GitHub"><a href="https://github.com/davidrguez98" target="_blank"><i class="bi bi-github"></i></a></li>
