--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
         <nav class="nav">
             <img class="logo" src="./assets/images/logo.png" alt="logo">
             <form action="/weather" id="cityForm" method="get">
-                <input type="text" name="cityInput" class="cityInput" placeholder="Escribe una ciudad...">
+                <input type="text" name="cityInput" class="cityInput" placeholder="Search location ...">
                 <button type="submit" class="cityButton"><i class="bi bi-search"></i></button>
             </form>          
         </nav>
