logo linkeado a web

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav class="nav">
-            <img class="logo" src="./assets/images/logo.png" alt="logo">
+            <a href="http://127.0.0.1:5500/frontend/index.html"><img class="logo" src="./assets/images/logo.png" alt="logo"></a>
             <form action="/weather" id="cityForm" method="get">
                 <input type="text" name="cityInput" class="cityInput" placeholder="Search location ...">
                 <button type="submit" class="cityButton"><i class="bi bi-search"></i></button>
